Generating Model-Wrappers with T4

--- a/FriendStorage.UI/FriendStorage.UI.csproj
+++ b/FriendStorage.UI/FriendStorage.UI.csproj
@@ -79,8 +79,8 @@
     <Compile Include="ViewModel\FriendEditViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\NavigationViewModel.cs" />
-    <Compile Include="Wrapper\IValidatableTrackingObject.cs" />
-    <Compile Include="Wrapper\NotifyDataErrorInfoBase.cs" />
+    <Compile Include="Wrapper\Base\IValidatableTrackingObject.cs" />
+    <Compile Include="Wrapper\Base\NotifyDataErrorInfoBase.cs" />
     <Compile Include="ViewModel\Observable.cs" />
     <Compile Include="View\Controls\ChangeTrackingCollectionInfo.xaml.cs">
       <DependentUpon>ChangeTrackingCollectionInfo.xaml</DependentUpon>
@@ -97,11 +97,20 @@
     <Compile Include="View\NavigationView.xaml.cs">
       <DependentUpon>NavigationView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Wrapper\AddressWrapper.cs" />
-    <Compile Include="Wrapper\ChangeTrackingCollection.cs" />
-    <Compile Include="Wrapper\FriendEmailWrapper.cs" />
-    <Compile Include="Wrapper\FriendWrapper.cs" />
-    <Compile Include="Wrapper\ModelWrapper.cs" />
+    <Compile Include="Wrapper\Base\ChangeTrackingCollection.cs" />
+    <Compile Include="Wrapper\Base\ModelWrapper.cs" />
+    <Compile Include="Wrapper\Custom\AddressWrapper.cs" />
+    <Compile Include="Wrapper\Custom\FriendEmailWrapper.cs" />
+    <Compile Include="Wrapper\Custom\FriendWrapper.cs" />
+    <Compile Include="Wrapper\Generated\AddressWrapper.g.cs" />
+    <Compile Include="Wrapper\Generated\FriendEmailWrapper.g.cs" />
+    <Compile Include="Wrapper\Generated\FriendGroupWrapper.g.cs" />
+    <Compile Include="Wrapper\Generated\FriendWrapper.g.cs" />
+    <Compile Include="Wrapper\Generated\GenerateModelWrappers.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>GenerateModelWrappers.tt</DependentUpon>
+    </Compile>
     <Page Include="Styles\Brushes.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -217,7 +226,15 @@
   <ItemGroup>
     <Resource Include="FriendStorageIcon.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Wrapper\Generated\GenerateModelWrappers.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>GenerateModelWrappers.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
